tests/ui/image/query/query_size_lod_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0>: HasQuerySizeLod` is not satisfied
   --> $DIR/query_size_lod_err.rs:12:15
    |
12  |     *output = image.query_size_lod(0);
    |               ^^^^^ -------------- required by a bound introduced by this call
    |               |
    |               the trait `HasQuerySizeLod` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0>`
    |
    = help: the following other types implement trait `HasQuerySizeLod`:
              Image<SampledType, 0, DEPTH, ARRAYED, 0, SAMPLED, FORMAT>
              Image<SampledType, 1, DEPTH, ARRAYED, 0, SAMPLED, FORMAT>
              Image<SampledType, 2, DEPTH, ARRAYED, 0, SAMPLED, FORMAT>
              Image<SampledType, 3, DEPTH, ARRAYED, 0, SAMPLED, FORMAT>
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, _, SAMPLED, FORMAT>::query_size_lod`
   --> $SPIRV_STD_SRC/image.rs:911:15
    |
911 |         Self: HasQuerySizeLod,
    |               ^^^^^^^^^^^^^^^ required by this bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, _, SAMPLED, FORMAT>::query_size_lod`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
